--- a/app/src/main/res/layout/activity_detector.xml
+++ b/app/src/main/res/layout/activity_detector.xml
@@ -10,36 +10,43 @@
         android:id="@+id/tittle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="DETEKSI TANAMAN OBAT"
         android:background="#61C758"
         android:padding="20dp"
-        android:textSize="18sp"
+        android:text="DETEKSI TANAMAN OBAT"
         android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        android:textSize="18sp"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <androidx.camera.view.PreviewView
         android:id="@+id/camera"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_margin="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
-        android:src="@color/black"
-        android:padding="10dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/tittle"
-        />
+        app:layout_constraintTop_toBottomOf="@id/tittle"
+        app:layout_constraintVertical_bias="0.3" />
+
+    <View
+        android:layout_width="300dp"
+        android:layout_height="0dp"
+        android:background="@drawable/rectangle_red"
+        app:layout_constraintBottom_toBottomOf="@id/camera"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="@id/camera"
+        app:layout_constraintStart_toStartOf="@id/camera"
+        app:layout_constraintTop_toTopOf="@id/camera" />
 
     <Button
         android:id="@+id/btn_camera"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="#61C758"
         android:text="Take Photo"
         android:textSize="14sp"
-        android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/camera"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/camera" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
