--- a/app/src/main/res/layout/activity_detector.xml
+++ b/app/src/main/res/layout/activity_detector.xml
@@ -28,14 +28,26 @@
         app:layout_constraintVertical_bias="0.3" />
 
     <View
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rectangle_red"
         app:layout_constraintBottom_toBottomOf="@id/camera"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@id/camera"
+        app:layout_constraintWidth_percent=".5"
+        android:layout_marginVertical="16dp"
         app:layout_constraintStart_toStartOf="@id/camera"
         app:layout_constraintTop_toTopOf="@id/camera" />
+
+<!--    <View-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:background="@drawable/rectangle_red"-->
+<!--        android:layout_marginVertical="16dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/camera"-->
+<!--        app:layout_constraintDimensionRatio="1:1.75"-->
+<!--        app:layout_constraintEnd_toEndOf="@id/camera"-->
+<!--        app:layout_constraintStart_toStartOf="@id/camera"-->
+<!--        app:layout_constraintTop_toTopOf="@id/camera" />-->
 
     <Button
         android:id="@+id/btn_camera"
@@ -47,6 +59,7 @@
         android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/camera" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
