--- a/app/src/main/res/layout/activity_expert_system.xml
+++ b/app/src/main/res/layout/activity_expert_system.xml
@@ -5,21 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primaryColor500"
-    tools:context=".GalleryActivity"
-    >
+    tools:context=".UI.ExpertSystemActivity">
 
     <TextView
         android:id="@+id/tittle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/primaryColor500"
-        android:layout_marginTop="18dp"
         android:padding="15dp"
-        android:text="GALERI TANAMAN OBAT"
+        android:text="SISTEM PAKAR"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="15dp"
+        android:text="Silahkan Pilih Gejala Penyakit yang Dialami"
+         />
 
 
 
@@ -27,24 +34,10 @@
         android:id="@+id/cardSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="100dp"
         android:layout_marginHorizontal="20dp"
         app:cardCornerRadius="25dp"
         tools:ignore="NotSibling">
-
-
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/searchTanaman"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:iconifiedByDefault="false"
-                android:paddingStart="-0dp"
-                android:queryHint="Mau cari tanaman apa?"
-                android:searchIcon="@drawable/ic_search"
-                android:theme="@style/SearchView"
-                app:queryBackground="@android:color/transparent" />
-
 
     </androidx.cardview.widget.CardView>
 
@@ -52,13 +45,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/cardSearch"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/bg_half_rounded">
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            >
+            android:layout_height="32dp">
 
             <View
                 android:layout_width="35dp"
@@ -76,11 +69,11 @@
             android:layout_height="match_parent"
             android:layout_marginTop="32dp"
             android:layout_marginHorizontal="16dp"
-            tools:listitem="@layout/list_item_gallery"
+            tools:listitem="@layout/list_item_expert"
             />
 
+
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
 
 </RelativeLayout>
