--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="16dp"
         android:text="SISTEM PAKAR \nKLASIFIKASI TANAMAN OBAT"
         android:textAlignment="center"
-        android:textColor="#61C758"
+        android:textColor="@color/primaryColor600"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +36,7 @@
         android:layout_height="70dp"
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="#61C758"
+        android:backgroundTint="@color/primaryColor600"
         android:text="DETEKSI DAUN TANAMAN OBAT"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnChooseDisease"
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginHorizontal="40dp"
-        android:backgroundTint="#61C758"
+        android:backgroundTint="@color/primaryColor600"
         android:text="PILIH GEJALA PENYAKIT"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnGallery"
@@ -60,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginHorizontal="40dp"
-        android:backgroundTint="#61C758"
+        android:backgroundTint="@color/primaryColor600"
         android:text="GALERI TANAMAN OBAT"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
