fix: add placeholder

--- a/app/src/main/res/layout/activity_view_image.xml
+++ b/app/src/main/res/layout/activity_view_image.xml
@@ -24,7 +24,7 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="48dp"
-        tools:src="@tools:sample/backgrounds/scenic"
+        android:src="@drawable/image_placeholder"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintVertical_bias="0.3"
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:backgroundTint="@color/primaryColor500"
-        android:text="Input Gallery"
+        android:text="From Gallery"
         android:textSize="14sp"
         app:layout_constraintTop_toTopOf="@id/btn_takephoto"
         app:layout_constraintRight_toRightOf="@id/btn_submit"
